syntax = "proto3";

package user;

service UserService {
  rpc Create(UserCreateRequest) returns (UserResponse){}
  rpc Update(UserUpdateRequest) returns (UserResponse){}
  rpc FindOne(UserIdRequest) returns (UserResponse){}
  rpc FindAll(Empty) returns (UsersResponse){}
  rpc Delete(UserIdRequest) returns (Empty){}
}

message Empty{}

message UserIdRequest {
  required string id = 1;
}

message UserCreateRequest {
  required string name = 1;
  required string email = 2;
  required string password = 3;
  required int32 age = 4;
}

message UserUpdateRequest {
  required string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string password = 4;
  optional int32 age = 5;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  int32 age = 5;
}

message UsersResponse {
  repeated UserResponse data = 1;
}